// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane R3 — the phone is unchanged (golden) deliveries add sheet (header Add), iOS 390 1`] = `
{
  "lines": 465,
  "sha256": "9d3010dc30d31bff5d57f327ca047154a4cdd13f6ae22d269427128cdfa600fd",
}
`;

exports[`lane R3 — the phone is unchanged (golden) deliveries at rest, iOS 390 1`] = `
{
  "lines": 465,
  "sha256": "8f317580bc8e8a4dc0b3d44a48830b844fb2439f5adf4a94c3a3043176a4cbfb",
}
`;

exports[`lane R3 — the phone is unchanged (golden) deliveries at rest, web 390 1`] = `
{
  "lines": 465,
  "sha256": "8f317580bc8e8a4dc0b3d44a48830b844fb2439f5adf4a94c3a3043176a4cbfb",
}
`;

exports[`lane R3 — the phone is unchanged (golden) deliveries at rest, web 768 1`] = `
{
  "lines": 465,
  "sha256": "8f317580bc8e8a4dc0b3d44a48830b844fb2439f5adf4a94c3a3043176a4cbfb",
}
`;

exports[`lane R3 — the phone is unchanged (golden) deliveries receive sheet (receive-<id>), iOS 390 1`] = `
{
  "lines": 493,
  "sha256": "25c5e1e9f1c8d409e916bd4ad65b2ab2e9895c5a8c9ea5caa95a26ea366dcdd1",
}
`;

exports[`lane R3 — the phone is unchanged (golden) documents at rest, iOS 390 1`] = `
{
  "lines": 481,
  "sha256": "dbefe445458d2c1167f601c67ca918d2f1997f98b4d6003220951a04da43d9ec",
}
`;

exports[`lane R3 — the phone is unchanged (golden) documents at rest, web 390 1`] = `
{
  "lines": 481,
  "sha256": "dbefe445458d2c1167f601c67ca918d2f1997f98b4d6003220951a04da43d9ec",
}
`;

exports[`lane R3 — the phone is unchanged (golden) documents at rest, web 768 1`] = `
{
  "lines": 481,
  "sha256": "dbefe445458d2c1167f601c67ca918d2f1997f98b4d6003220951a04da43d9ec",
}
`;

exports[`lane R3 — the phone is unchanged (golden) leads at rest, iOS 390 1`] = `
{
  "lines": 605,
  "sha256": "6c1070181929781b9b8826bc27f82e7c3907e4f88725c516b22c65d19d8d3777",
}
`;

exports[`lane R3 — the phone is unchanged (golden) leads at rest, web 390 1`] = `
{
  "lines": 605,
  "sha256": "6c1070181929781b9b8826bc27f82e7c3907e4f88725c516b22c65d19d8d3777",
}
`;

exports[`lane R3 — the phone is unchanged (golden) leads at rest, web 768 1`] = `
{
  "lines": 605,
  "sha256": "6c1070181929781b9b8826bc27f82e7c3907e4f88725c516b22c65d19d8d3777",
}
`;
